--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -2724,6 +2724,9 @@ QSlider::handle:horizontal {
     border-radius: 3px;
 }</string>
                        </property>
+                       <property name="minimum">
+                        <number>10</number>
+                       </property>
                        <property name="maximum">
                         <number>100</number>
                        </property>
